{
    "name": "Controles",
    "maps": [
        {
            "name": "Controles",
            "id": "fa07516d-ac5a-4fff-bc78-d8511dbf7232",
            "actions": [
                {
                    "name": "moverse",
                    "type": "Value",
                    "id": "7eeaa047-0511-410b-a4b4-274f53cbc2ef",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mirar_alrededor",
                    "type": "Value",
                    "id": "4f09b25f-9945-4539-b0b1-db3c1d0cdf58",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "saltar",
                    "type": "Button",
                    "id": "b96a2484-d472-46c2-8005-bf1beaf8a848",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "extender_brazo_izquierdo",
                    "type": "Value",
                    "id": "c6cf6f7f-78aa-4773-b212-8c720ae36419",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "extender_brazo_derecho",
                    "type": "Value",
                    "id": "21720688-4abe-456b-9a9d-9ca855925f85",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "agarrar_mano_derecha",
                    "type": "Button",
                    "id": "3ccbfd22-29f8-40ee-a1c4-5fdb144ca8ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "agarrar_mano_izquierda",
                    "type": "Button",
                    "id": "41cf045c-2c46-4bad-9c0d-b057adecdd75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mando_boton_oeste",
                    "type": "Button",
                    "id": "a031427d-ad29-49f8-8d6e-3ebb47a4fdd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mando_boton_este",
                    "type": "Button",
                    "id": "fd43a58a-fc5d-4439-86b5-5f1d781dbb45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mando_boton_norte",
                    "type": "Button",
                    "id": "62f55cfc-719f-4e8e-b0d1-521590986556",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mando_boton_sur",
                    "type": "Button",
                    "id": "28cfb7c1-c337-4173-b49e-55460b589986",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69b0f458-92c8-492d-84da-8b6e2952cdba",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b463b7e4-f5a2-4132-b19c-8c996c63f827",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b7227b0b-f315-4332-b886-145047951892",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c4c58d34-e5a8-43f1-ac73-c9d286b4374d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "28959195-e760-435e-a45b-1eb04ef3d62f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ba6f4b0e-75bd-4490-93d1-5ded478a74ad",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "befc5665-8956-47da-9425-53bd3dd39e69",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fbb0b0e7-1cfd-4e4d-b770-63e6af77583f",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d12b7eac-c34a-4ffa-b567-d3b1ee516bf1",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "baa2b84e-b9ca-4ce1-8c6b-05234042dcd3",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c1f8c0d3-b028-4c43-811b-988ea1bcb51e",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ad22c12e-ddb7-48d6-bc18-681affac3f52",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mirar_alrededor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7a6f5d77-d53c-46e3-8293-fe4d51995b75",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "saltar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7583dc31-48a5-40d1-80ad-e63cc38b9c58",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "saltar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3c01adb-3624-4895-9662-67174b566a28",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "extender_brazo_izquierdo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "900343cf-edb0-45a8-b096-4c6bc8621a25",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "extender_brazo_izquierdo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "899049e3-a6ac-4713-a90d-8dc071e56795",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "extender_brazo_derecho",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e3273f4-9f65-42a6-a32c-6243f15e6ae8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "agarrar_mano_derecha",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61e101fc-95db-4b36-85ba-0173918817de",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "agarrar_mano_derecha",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfd0cde5-d75c-4a1b-9b26-d5937db2f07c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "agarrar_mano_izquierda",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe4b4a0-6504-4141-b066-8b4268fc484a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "agarrar_mano_izquierda",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05719a19-2ce8-4d3c-ba85-3b6b487be5b0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "extender_brazo_derecho",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e6269f9-4b8f-415b-b19a-fd3741d4b886",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mando_boton_oeste",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad585b3d-3a9e-45e8-8c3f-eda715fa5023",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mando_boton_este",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8f3d194-f2ce-4ada-a422-64ba3ce22f4a",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mando_boton_norte",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8279bb29-9b54-4d0b-9c85-e02212f508f6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mando_boton_sur",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}